--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mypage",
   "private": true,
-  "homepage": "/pedrozavalat.github.io/#",
+  "homepage": "https://pedrozavalat.github.io",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
