--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "animate.css": "^4.1.1",
     "dotenv": "^16.4.5",
     "googleapis": "^144.0.0",
