feat: landing page and navbar

--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@tsparticles/slim": "^3.7.1",
     "@vitejs/plugin-react": "^4.3.4",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "googleapis": "^144.0.0",
     "i": "^0.3.7",
     "react": "^18.3.1",
     "react-animate-on-scroll": "^2.1.9",
     "react-animation-on-scroll": "^5.1.0",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-embed": "^3.7.0",
     "react-font": "^1.2.1",
